@@ -1,3 +1,8 @@
+2012-03-22  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsppd.c (PPD_dealloc): Add missing NULL check for
+	debugging message (Ubuntu #951001).  Patch from Till Kamppeter.
+
 2012-03-06  Tim Waugh  <twaugh@redhat.com>
 
 	* setup.py: Version 1.9.61.
